--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,10 @@ plugins {
 }
 
 def projectVersion = System.getenv("VERSION") ?: '1.0.0'
-def runeLiteVersion = '1.12.6' // latest.release
+def runeLiteVersion = 'latest.release'
 
 version = projectVersion
 project.version = projectVersion
-
 
 repositories {
     mavenCentral()
@@ -32,6 +31,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
     testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
+}
+
+processResources {
+    inputs.property "version", projectVersion
+
+    filesMatching("kraken-version.properties") {
+        expand(version: projectVersion)
+    }
 }
 
 testing {
